src/objects/Record_Count__c.object
<CustomObject>
    <description>This object will be used in getting total record Count of Service Request through Schedule Class.</description>
    <fields>
        <fullName>Till_Date_Time__c</fullName>
        <label>Till Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Closed_Cases__c</fullName>
        <label>Total Closed Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Cases__c</fullName>
        <label>Total Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Record_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Record Count</label>
    <nameField>
        <displayFormat>RC-{000}</displayFormat>
        <label>Record Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>